[gd_scene load_steps=12 format=4 uid="uid://gks3cca5jlpg"]

[ext_resource type="PackedScene" uid="uid://bv1v81aa2q4gw" path="res://map/map.tscn" id="1_vqjhk"]
[ext_resource type="PackedScene" uid="uid://bin6wnaw5ta86" path="res://map/transition.tscn" id="2_3osmi"]
[ext_resource type="Script" uid="uid://36ucf0orod4m" path="res://maps/gate.gd" id="2_khtaa"]
[ext_resource type="Texture2D" uid="uid://bska4m407gjfw" path="res://sprites/background1.png" id="2_rfesw"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3osmi"]
texture = ExtResource("2_rfesw")
texture_region_size = Vector2i(64, 64)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:0/size_in_atlas = Vector2i(3, 3)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-96, -96, 96, -96, 96, 96, -96, 96)
8:4/0 = 0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:0/size_in_atlas = Vector2i(2, 2)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
8:3/0 = 0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
11:1/0 = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 0, -32, 0, 32, -32, 32)
11:0/0 = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 16, 0, 16, 0, 32, -32, 32)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 16, 32, 16, 32, 32, -32, 32)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, 16, 32, 16, 32, 32, 16, 32)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -32, 32, -32, 32, 32, 16, 32)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -32, 32, -32, 32, 0, 16, 0)
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 0, -32, 0)
11:2/0 = 0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 0, -32, 0, 0, -32, 0)
0:5/size_in_atlas = Vector2i(3, 3)
0:5/0 = 0
3:5/size_in_atlas = Vector2i(2, 3)
3:5/0 = 0
5:5/size_in_atlas = Vector2i(2, 3)
5:5/0 = 0
7:5/size_in_atlas = Vector2i(3, 3)
7:5/0 = 0
10:4/size_in_atlas = Vector2i(2, 2)
10:4/0 = 0

[sub_resource type="TileSet" id="TileSet_khtaa"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_3osmi")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_khtaa"]
size = Vector2(139, 174)

[sub_resource type="Animation" id="Animation_gh2gf"]
resource_name = "open"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-2500, -282), Vector2(-2500, -534)]
}

[sub_resource type="Animation" id="Animation_c88bi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2500, -282)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a2fcc"]
_data = {
&"RESET": SubResource("Animation_c88bi"),
&"open": SubResource("Animation_gh2gf")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3osmi"]
size = Vector2(102, 48.5)

[node name="Map" instance=ExtResource("1_vqjhk")]
script = ExtResource("2_khtaa")

[node name="ToGate" parent="Transitions" index="0" instance=ExtResource("2_3osmi")]
position = Vector2(50, 0)
target_location = "start"

[node name="ToSentinel" parent="Transitions" index="1" instance=ExtResource("2_3osmi")]
position = Vector2(-3118, -193)
target_location = "sentinel"
entry = 1

[node name="Background" type="TileMapLayer" parent="Environment" index="0"]
modulate = Color(0.423651, 0.423651, 0.423651, 1)
z_index = -1
tile_map_data = PackedByteArray("AADP//n/AQAIAAQAAADP//r/AQAIAAQAAADP//v/AQAIAAQAAADP//z/AQAIAAQAAADQ//n/AQAIAAQAAADQ//r/AQAIAAQAAADQ//v/AQAIAAQAAADQ//z/AQAIAAQAAADR//n/AQAIAAQAAADR//r/AQAIAAQAAADR//v/AQAIAAQAAADR//z/AQAIAAQAAADS//n/AQAIAAQAAADS//r/AQAIAAQAAADS//v/AQAIAAQAAADS//z/AQAIAAQAAADT//n/AQAIAAQAAADT//r/AQAIAAQAAADT//v/AQAIAAQAAADT//z/AQAIAAQAAADU//n/AQAIAAQAAADU//r/AQAIAAQAAADU//v/AQAIAAQAAADU//z/AQAIAAQAAADV//n/AQAIAAQAAADV//r/AQAIAAQAAADV//v/AQAIAAQAAADV//z/AQAIAAQAAADW//n/AQAIAAQAAADW//r/AQAIAAQAAADW//v/AQAIAAQAAADW//z/AQAIAAQAAADX//n/AQAIAAQAAADX//r/AQAIAAQAAADX//v/AQAIAAQAAADX//z/AQAIAAQAAADY//n/AQAIAAQAAADY//r/AQAIAAQAAADY//v/AQAIAAQAAADY//z/AQAIAAQAAADZ//n/AQAIAAQAAADZ//r/AQAIAAQAAADZ//v/AQAIAAQAAADZ//z/AQAIAAQAAADa//n/AQAIAAQAAADa//r/AQAIAAQAAADa//v/AQAIAAQAAADa//z/AQAIAAQAAADb//n/AQAIAAQAAADb//r/AQAIAAQAAADb//v/AQAIAAQAAADb//z/AQAIAAQAAADc//n/AQAIAAQAAADc//r/AQAIAAQAAADc//v/AQAIAAQAAADc//z/AQAIAAQAAADd//n/AQAIAAQAAADd//r/AQAIAAQAAADd//v/AQAIAAQAAADd//z/AQAIAAQAAADe//n/AQAIAAQAAADe//r/AQAIAAQAAADe//v/AQAIAAQAAADe//z/AQAIAAQAAADf//n/AQAIAAQAAADf//r/AQAIAAQAAADf//v/AQAIAAQAAADf//z/AQAIAAQAAADg//n/AQAIAAQAAADg//r/AQAIAAQAAADg//v/AQAIAAQAAADg//z/AQAIAAQAAADh//n/AQAIAAQAAADh//r/AQAIAAQAAADh//v/AQAIAAQAAADh//z/AQAIAAQAAADi//n/AQAIAAQAAADi//r/AQAIAAQAAADi//v/AQAIAAQAAADi//z/AQAIAAQAAADj//n/AQAIAAQAAADj//r/AQAIAAQAAADj//v/AQAIAAQAAADj//z/AQAIAAQAAADk//n/AQAIAAQAAADk//r/AQAIAAQAAADk//v/AQAIAAQAAADk//z/AQAIAAQAAADl//n/AQAIAAQAAADl//r/AQAIAAQAAADl//v/AQAIAAQAAADl//z/AQAIAAQAAADm//n/AQAIAAQAAADm//r/AQAIAAQAAADm//v/AQAIAAQAAADm//z/AQAIAAQAAADn//n/AQAIAAQAAADn//r/AQAIAAQAAADn//v/AQAIAAQAAADn//z/AQAIAAQAAADo//n/AQAIAAQAAADo//r/AQAIAAQAAADo//v/AQAIAAQAAADo//z/AQAIAAQAAADp//n/AQAIAAQAAADp//r/AQAIAAQAAADp//v/AQAIAAQAAADp//z/AQAIAAQAAADq//n/AQAIAAQAAADq//r/AQAIAAQAAADq//v/AQAIAAQAAADq//z/AQAIAAQAAADr//n/AQAIAAQAAADr//r/AQAIAAQAAADr//v/AQAIAAQAAADr//z/AQAIAAQAAADs//n/AQAIAAQAAADs//r/AQAIAAQAAADs//v/AQAIAAQAAADs//z/AQAIAAQAAADt//n/AQAIAAQAAADt//r/AQAIAAQAAADt//v/AQAIAAQAAADt//z/AQAIAAQAAADu//n/AQAIAAQAAADu//r/AQAIAAQAAADu//v/AQAIAAQAAADu//z/AQAIAAQAAADv//n/AQAIAAQAAADv//r/AQAIAAQAAADv//v/AQAIAAQAAADv//z/AQAIAAQAAADw//n/AQAIAAQAAADw//r/AQAIAAQAAADw//v/AQAIAAQAAADw//z/AQAIAAQAAADx//n/AQAIAAQAAADx//r/AQAIAAQAAADx//v/AQAIAAQAAADx//z/AQAIAAQAAADy//n/AQAIAAQAAADy//r/AQAIAAQAAADy//v/AQAIAAQAAADy//z/AQAIAAQAAADz//n/AQAIAAQAAADz//r/AQAIAAQAAADz//v/AQAIAAQAAADz//z/AQAIAAQAAAD0//n/AQAIAAQAAAD0//r/AQAIAAQAAAD0//v/AQAIAAQAAAD0//z/AQAIAAQAAAD1//n/AQAIAAQAAAD1//r/AQAIAAQAAAD1//v/AQAIAAQAAAD1//z/AQAIAAQAAADa//T/AQAIAAQAAADa//X/AQAIAAQAAADa//b/AQAIAAQAAADa//f/AQAIAAQAAADa//j/AQAIAAQAAADa//3/AQAIAAQAAADa//7/AQAIAAQAAADa////AQAIAAQAAADb//T/AQAIAAQAAADb//X/AQAIAAQAAADb//b/AQAIAAQAAADb//f/AQAIAAQAAADb//j/AQAIAAQAAADb//3/AQAIAAQAAADb//7/AQAIAAQAAADb////AQAIAAQAAADc//T/AQAIAAQAAADc//X/AQAIAAQAAADc//b/AQAIAAQAAADc//f/AQAIAAQAAADc//j/AQAIAAQAAADc//3/AQAIAAQAAADc//7/AQAIAAQAAADc////AQAIAAQAAADd//T/AQAIAAQAAADd//X/AQAIAAQAAADd//b/AQAIAAQAAADd//f/AQAIAAQAAADd//j/AQAIAAQAAADd//3/AQAIAAQAAADd//7/AQAIAAQAAADd////AQAIAAQAAADe//T/AQAIAAQAAADe//X/AQAIAAQAAADe//b/AQAIAAQAAADe//f/AQAIAAQAAADe//j/AQAIAAQAAADe//3/AQAIAAQAAADe//7/AQAIAAQAAADe////AQAIAAQAAADf//T/AQAIAAQAAADf//X/AQAIAAQAAADf//b/AQAIAAQAAADf//f/AQAIAAQAAADf//j/AQAIAAQAAADf//3/AQAIAAQAAADf//7/AQAIAAQAAADf////AQAIAAQAAADg//T/AQAIAAQAAADg//X/AQAIAAQAAADg//b/AQAIAAQAAADg//f/AQAIAAQAAADg//j/AQAIAAQAAADg//3/AQAIAAQAAADg//7/AQAIAAQAAADg////AQAIAAQAAADh//T/AQAIAAQAAADh//X/AQAIAAQAAADh//b/AQAIAAQAAADh//f/AQAIAAQAAADh//j/AQAIAAQAAADh//3/AQAIAAQAAADh//7/AQAIAAQAAADh////AQAIAAQAAADi//T/AQAIAAQAAADi//X/AQAIAAQAAADi//b/AQAIAAQAAADi//f/AQAIAAQAAADi//j/AQAIAAQAAADi//3/AQAIAAQAAADi//7/AQAIAAQAAADi////AQAIAAQAAADj//T/AQAIAAQAAADj//X/AQAIAAQAAADj//b/AQAIAAQAAADj//f/AQAIAAQAAADj//j/AQAIAAQAAADj//3/AQAIAAQAAADj//7/AQAIAAQAAADj////AQAIAAQAAADk//T/AQAIAAQAAADk//X/AQAIAAQAAADk//b/AQAIAAQAAADk//f/AQAIAAQAAADk//j/AQAIAAQAAADk//3/AQAIAAQAAADk//7/AQAIAAQAAADk////AQAIAAQAAADl//T/AQAIAAQAAADl//X/AQAIAAQAAADl//b/AQAIAAQAAADl//f/AQAIAAQAAADl//j/AQAIAAQAAADl//3/AQAIAAQAAADl//7/AQAIAAQAAADl////AQAIAAQAAADm//T/AQAIAAQAAADm//X/AQAIAAQAAADm//b/AQAIAAQAAADm//f/AQAIAAQAAADm//j/AQAIAAQAAADm//3/AQAIAAQAAADm//7/AQAIAAQAAADm////AQAIAAQAAADn//T/AQAIAAQAAADn//X/AQAIAAQAAADn//b/AQAIAAQAAADn//f/AQAIAAQAAADn//j/AQAIAAQAAADn//3/AQAIAAQAAADn//7/AQAIAAQAAADn////AQAIAAQAAADo//T/AQAIAAQAAADo//X/AQAIAAQAAADo//b/AQAIAAQAAADo//f/AQAIAAQAAADo//j/AQAIAAQAAADo//3/AQAIAAQAAADo//7/AQAIAAQAAADo////AQAIAAQAAADp//T/AQAIAAQAAADp//X/AQAIAAQAAADp//b/AQAIAAQAAADp//f/AQAIAAQAAADp//j/AQAIAAQAAADp//3/AQAIAAQAAADp//7/AQAIAAQAAADp////AQAIAAQAAADq//T/AQAIAAQAAADq//X/AQAIAAQAAADq//b/AQAIAAQAAADq//f/AQAIAAQAAADq//j/AQAIAAQAAADq//3/AQAIAAQAAADq//7/AQAIAAQAAADq////AQAIAAQAAADr//T/AQAIAAQAAADr//X/AQAIAAQAAADr//b/AQAIAAQAAADr//f/AQAIAAQAAADr//j/AQAIAAQAAADr//3/AQAIAAQAAADr//7/AQAIAAQAAADr////AQAIAAQAAADs//T/AQAIAAQAAADs//X/AQAIAAQAAADs//b/AQAIAAQAAADs//f/AQAIAAQAAADs//j/AQAIAAQAAADs//3/AQAIAAQAAADs//7/AQAIAAQAAADs////AQAIAAQAAADt//T/AQAIAAQAAADt//X/AQAIAAQAAADt//b/AQAIAAQAAADt//f/AQAIAAQAAADt//j/AQAIAAQAAADt//3/AQAIAAQAAADt//7/AQAIAAQAAADt////AQAIAAQAAADu//T/AQAIAAQAAADu//X/AQAIAAQAAADu//b/AQAIAAQAAADu//f/AQAIAAQAAADu//j/AQAIAAQAAADu//3/AQAIAAQAAADu//7/AQAIAAQAAADu////AQAIAAQAAADv//T/AQAIAAQAAADv//X/AQAIAAQAAADv//b/AQAIAAQAAADv//f/AQAIAAQAAADv//j/AQAIAAQAAADv//3/AQAIAAQAAADv//7/AQAIAAQAAADv////AQAIAAQAAADw//T/AQAIAAQAAADw//X/AQAIAAQAAADw//b/AQAIAAQAAADw//f/AQAIAAQAAADw//j/AQAIAAQAAADw//3/AQAIAAQAAADw//7/AQAIAAQAAADw////AQAIAAQAAADx//T/AQAIAAQAAADx//X/AQAIAAQAAADx//b/AQAIAAQAAADx//f/AQAIAAQAAADx//j/AQAIAAQAAADx//3/AQAIAAQAAADx//7/AQAIAAQAAADx////AQAIAAQAAADy//T/AQAIAAQAAADy//X/AQAIAAQAAADy//b/AQAIAAQAAADy//f/AQAIAAQAAADy//j/AQAIAAQAAADy//3/AQAIAAQAAADy//7/AQAIAAQAAADy////AQAIAAQAAADz//T/AQAIAAQAAADz//X/AQAIAAQAAADz//b/AQAIAAQAAADz//f/AQAIAAQAAADz//j/AQAIAAQAAADz//3/AQAIAAQAAADz//7/AQAIAAQAAADz////AQAIAAQAAAD0//T/AQAIAAQAAAD0//X/AQAIAAQAAAD0//b/AQAIAAQAAAD0//f/AQAIAAQAAAD0//j/AQAIAAQAAAD0//3/AQAIAAQAAAD0//7/AQAIAAQAAAD0////AQAIAAQAAAD1//T/AQAIAAQAAAD1//X/AQAIAAQAAAD1//b/AQAIAAQAAAD1//f/AQAIAAQAAAD1//j/AQAIAAQAAAD1//3/AQAIAAQAAAD1//7/AQAIAAQAAAD1////AQAIAAQAAADb/wAAAQAIAAQAAADb/wEAAQAIAAQAAADb/wIAAQAIAAQAAADb/wMAAQAIAAQAAADc/wAAAQAIAAQAAADc/wEAAQAIAAQAAADc/wIAAQAIAAQAAADc/wMAAQAIAAQAAADd/wAAAQAIAAQAAADd/wEAAQAIAAQAAADd/wIAAQAIAAQAAADd/wMAAQAIAAQAAADe/wAAAQAIAAQAAADe/wEAAQAIAAQAAADe/wIAAQAIAAQAAADe/wMAAQAIAAQAAADf/wAAAQAIAAQAAADf/wEAAQAIAAQAAADf/wIAAQAIAAQAAADf/wMAAQAIAAQAAADg/wAAAQAIAAQAAADg/wEAAQAIAAQAAADg/wIAAQAIAAQAAADg/wMAAQAIAAQAAADh/wAAAQAIAAQAAADh/wEAAQAIAAQAAADh/wIAAQAIAAQAAADh/wMAAQAIAAQAAADi/wAAAQAIAAQAAADi/wEAAQAIAAQAAADi/wIAAQAIAAQAAADi/wMAAQAIAAQAAADj/wAAAQAIAAQAAADj/wEAAQAIAAQAAADj/wIAAQAIAAQAAADj/wMAAQAIAAQAAADk/wAAAQAIAAQAAADk/wEAAQAIAAQAAADk/wIAAQAIAAQAAADk/wMAAQAIAAQAAADl/wAAAQAIAAQAAADl/wEAAQAIAAQAAADl/wIAAQAIAAQAAADl/wMAAQAIAAQAAADm/wAAAQAIAAQAAADm/wEAAQAIAAQAAADm/wIAAQAIAAQAAADm/wMAAQAIAAQAAADn/wAAAQAIAAQAAADn/wEAAQAIAAQAAADn/wIAAQAIAAQAAADn/wMAAQAIAAQAAADo/wAAAQAIAAQAAADo/wEAAQAIAAQAAADo/wIAAQAIAAQAAADo/wMAAQAIAAQAAADp/wAAAQAIAAQAAADp/wEAAQAIAAQAAADp/wIAAQAIAAQAAADp/wMAAQAIAAQAAADq/wAAAQAIAAQAAADq/wEAAQAIAAQAAADq/wIAAQAIAAQAAADq/wMAAQAIAAQAAADr/wAAAQAIAAQAAADr/wEAAQAIAAQAAADr/wIAAQAIAAQAAADr/wMAAQAIAAQAAADs/wAAAQAIAAQAAADs/wEAAQAIAAQAAADs/wIAAQAIAAQAAADs/wMAAQAIAAQAAADt/wAAAQAIAAQAAADt/wEAAQAIAAQAAADt/wIAAQAIAAQAAADt/wMAAQAIAAQAAADu/wAAAQAIAAQAAADu/wEAAQAIAAQAAADu/wIAAQAIAAQAAADu/wMAAQAIAAQAAADv/wAAAQAIAAQAAADv/wEAAQAIAAQAAADv/wIAAQAIAAQAAADv/wMAAQAIAAQAAADw/wAAAQAIAAQAAADw/wEAAQAIAAQAAADw/wIAAQAIAAQAAADw/wMAAQAIAAQAAADb/wQAAQAIAAQAAADb/wUAAQAIAAQAAADb/wYAAQAIAAQAAADb/wcAAQAIAAQAAADc/wQAAQAIAAQAAADc/wUAAQAIAAQAAADc/wYAAQAIAAQAAADc/wcAAQAIAAQAAADd/wQAAQAIAAQAAADd/wUAAQAIAAQAAADd/wYAAQAIAAQAAADd/wcAAQAIAAQAAADe/wQAAQAIAAQAAADe/wUAAQAIAAQAAADe/wYAAQAIAAQAAADe/wcAAQAIAAQAAADf/wQAAQAIAAQAAADf/wUAAQAIAAQAAADf/wYAAQAIAAQAAADf/wcAAQAIAAQAAADg/wQAAQAIAAQAAADg/wUAAQAIAAQAAADg/wYAAQAIAAQAAADg/wcAAQAIAAQAAADh/wQAAQAIAAQAAADh/wUAAQAIAAQAAADh/wYAAQAIAAQAAADh/wcAAQAIAAQAAADi/wQAAQAIAAQAAADi/wUAAQAIAAQAAADi/wYAAQAIAAQAAADi/wcAAQAIAAQAAADj/wQAAQAIAAQAAADj/wUAAQAIAAQAAADj/wYAAQAIAAQAAADj/wcAAQAIAAQAAADk/wQAAQAIAAQAAADk/wUAAQAIAAQAAADk/wYAAQAIAAQAAADk/wcAAQAIAAQAAADl/wQAAQAIAAQAAADl/wUAAQAIAAQAAADl/wYAAQAIAAQAAADl/wcAAQAIAAQAAADm/wQAAQAIAAQAAADm/wUAAQAIAAQAAADm/wYAAQAIAAQAAADm/wcAAQAIAAQAAADn/wQAAQAIAAQAAADn/wUAAQAIAAQAAADn/wYAAQAIAAQAAADn/wcAAQAIAAQAAADo/wQAAQAIAAQAAADo/wUAAQAIAAQAAADo/wYAAQAIAAQAAADo/wcAAQAIAAQAAADp/wQAAQAIAAQAAADp/wUAAQAIAAQAAADp/wYAAQAIAAQAAADp/wcAAQAIAAQAAADq/wQAAQAIAAQAAADq/wUAAQAIAAQAAADq/wYAAQAIAAQAAADq/wcAAQAIAAQAAADr/wQAAQAIAAQAAADr/wUAAQAIAAQAAADr/wYAAQAIAAQAAADr/wcAAQAIAAQAAAD2//z/AQAIAAQAAAD2//3/AQAIAAQAAAD2//7/AQAIAAQAAAD2////AQAIAAQAAAD3//z/AQAIAAQAAAD3//3/AQAIAAQAAAD3//7/AQAIAAQAAAD3////AQAIAAQAAAD4//z/AQAIAAQAAAD4//3/AQAIAAQAAAD4//7/AQAIAAQAAAD4////AQAIAAQAAAD5//z/AQAIAAQAAAD5//3/AQAIAAQAAAD5//7/AQAIAAQAAAD5////AQAIAAQAAAD6//z/AQAIAAQAAAD6//3/AQAIAAQAAAD6//7/AQAIAAQAAAD6////AQAIAAQAAAD7//z/AQAIAAQAAAD7//3/AQAIAAQAAAD7//7/AQAIAAQAAAD7////AQAIAAQAAAD8//z/AQAIAAQAAAD8//3/AQAIAAQAAAD8//7/AQAIAAQAAAD8////AQAIAAQAAAD9//z/AQAIAAQAAAD9//3/AQAIAAQAAAD9//7/AQAIAAQAAAD9////AQAIAAQAAAD+//z/AQAIAAQAAAD+//3/AQAIAAQAAAD+//7/AQAIAAQAAAD+////AQAIAAQAAAD///z/AQAIAAQAAAD///3/AQAIAAQAAAD///7/AQAIAAQAAAD/////AQAIAAQAAAAAAPz/AQAIAAQAAAAAAP3/AQAIAAQAAAAAAP7/AQAIAAQAAAAAAP//AQAIAAQAAAA=")
tile_set = SubResource("TileSet_khtaa")
occlusion_enabled = false
collision_enabled = false
navigation_enabled = false

[node name="Foreground" type="TileMapLayer" parent="Environment" index="1"]
tile_map_data = PackedByteArray("AAAAAAAAAQADAAQAAAD//wAAAQADAAQAAAD+/wAAAQADAAQAAAD9/wAAAQADAAQAAAD8/wAAAQADAAQAAAD7/wAAAQADAAQAAAD6/wAAAQADAAQAAAD5/wAAAQADAAQAAAD4/wAAAQADAAQAAAD3/wAAAQADAAQAAAD2/wAAAQADAAQAAAAAAPz/AQAKAAIAAAD2//z/AQAKAAIAAAD3//z/AQAKAAIAAAD4//z/AQAKAAIAAAD5//z/AQAKAAIAAAD6//z/AQAKAAIAAAD7//z/AQAKAAIAAAD8//z/AQAKAAIAAAD9//z/AQAKAAIAAAD+//z/AQAKAAIAAAD///z/AQAKAAIAAAD1/wAAAQADAAQAAAD0/wAAAQADAAQAAADz/wAAAQADAAQAAADy/wAAAQADAAQAAADx/wAAAQADAAQAAAAAAPv/AQAIAAQAAAAAAPr/AQAIAAQAAAAAAPn/AQAIAAQAAAAAAPj/AQAIAAQAAAAAAPf/AQAIAAQAAAD2//f/AQAIAAQAAAD3//f/AQAIAAQAAAD4//f/AQAIAAQAAAD5//f/AQAIAAQAAAD6//f/AQAIAAQAAAD7//f/AQAIAAQAAAD8//f/AQAIAAQAAAD9//f/AQAIAAQAAAD+//f/AQAIAAQAAAD///f/AQAIAAQAAAD2//j/AQAIAAQAAAD3//j/AQAIAAQAAAD4//j/AQAIAAQAAAD5//j/AQAIAAQAAAD6//j/AQAIAAQAAAD7//j/AQAIAAQAAAD8//j/AQAIAAQAAAD9//j/AQAIAAQAAAD+//j/AQAIAAQAAAD///j/AQAIAAQAAAD2//n/AQAIAAQAAAD2//r/AQAIAAQAAAD2//v/AQAIAAQAAAD3//n/AQAIAAQAAAD3//r/AQAIAAQAAAD3//v/AQAIAAQAAAD4//n/AQAHAAUAAAD4//r/AQAIAAQAAAD4//v/AQAIAAQAAAD5//n/AQAIAAQAAAD5//r/AQAIAAQAAAD5//v/AQAIAAQAAAD6//n/AQAIAAQAAAD6//r/AQAIAAQAAAD6//v/AQAIAAQAAAD7//n/AQAIAAQAAAD7//r/AQAIAAQAAAD7//v/AQAIAAQAAAD8//n/AQAIAAQAAAD8//r/AQAIAAQAAAD8//v/AQAIAAQAAAD9//n/AQAIAAQAAAD9//r/AQAIAAQAAAD9//v/AQAIAAQAAAD+//n/AQAIAAQAAAD+//r/AQAIAAQAAAD+//v/AQAIAAQAAAD///n/AQAIAAQAAAD///r/AQAIAAQAAAD///v/AQAIAAQAAAD1//v/AQAJAAEAAAD1//r/AQAJAAEAAAD1//n/AQAJAAEAAAD1//j/AQAJAAEAAAD1//f/AQAJAAEAAAD1//z/AQAJAAIAAADw/wAAAQAJAAEAAADw/wEAAQAJAAEAAADw/wIAAQAJAAEAAADw/wMAAQAJAAEAAADw/wQAAQADAAQAAADv/wQAAQADAAQAAADu/wQAAQADAAQAAADt/wQAAQADAAQAAADs/wQAAQADAAQAAADr/wQAAQAJAAEAAADr/wUAAQAJAAEAAADr/wYAAQAJAAEAAADr/wcAAQAJAAEAAADr/wgAAQADAAQAAADq/wgAAQADAAQAAADp/wgAAQADAAQAAADo/wgAAQADAAQAAADn/wgAAQADAAQAAADm/wgAAQADAAQAAADl/wgAAQADAAQAAADk/wgAAQADAAQAAADj/wgAAQADAAQAAADi/wgAAQADAAQAAADh/wgAAQADAAQAAADg/wgAAQADAAQAAADf/wgAAQADAAQAAADe/wgAAQADAAQAAADd/wgAAQADAAQAAADc/wgAAQADAAQAAADb/wgAAQADAAQAAADa//3/AQADAAQAAADZ//3/AQADAAQAAADY//3/AQADAAQAAADX//3/AQADAAQAAADW//3/AQADAAQAAADV//3/AQADAAQAAADU//3/AQADAAQAAADT//3/AQADAAQAAADS//3/AQADAAQAAADb//3/AQALAAEAAADb//7/AQALAAEAAADb////AQALAAEAAADb/wAAAQALAAEAAADb/wEAAQALAAEAAADb/wIAAQALAAEAAADb/wMAAQALAAEAAADb/wQAAQALAAEAAADb/wUAAQALAAEAAADb/wYAAQALAAEAAADb/wcAAQALAAEAAADp//3/AQAKAAEAAADo//3/AQAKAAEAAADq//3/AQALAAEAAADp//z/AQAKAAAAAADo//z/AQAKAAAAAADn//3/AQAJAAEAAADo//7/AQAKAAIAAADp//7/AQAKAAIAAADq//7/AQALAAIAAADq//z/AQALAAAAAADn//z/AQAJAAAAAADn//7/AQAJAAIAAADg//3/AQAKAAEAAADh//3/AQAKAAEAAADi//3/AQALAAEAAADh//z/AQAKAAAAAADg//z/AQAKAAAAAADf//z/AQAJAAAAAADf//3/AQAJAAEAAADf//7/AQAJAAIAAADg//7/AQAKAAIAAADh//7/AQAKAAIAAADi//7/AQALAAIAAADi//z/AQALAAAAAADZ//n/AQAKAAIAAADY//n/AQAKAAIAAADX//n/AQAKAAIAAADW//n/AQAKAAIAAADV//n/AQAKAAIAAADU//n/AQAKAAIAAADT//n/AQAKAAIAAADS//n/AQAKAAIAAADR//n/AQAKAAIAAADQ//n/AQAKAAIAAADP//n/AQAKAAIAAADR//3/AQADAAQAAADQ//3/AQADAAQAAADP//3/AQADAAQAAADa//n/AQALAAIAAADa//j/AQALAAEAAADa//f/AQALAAEAAADa//b/AQALAAEAAADa//X/AQALAAEAAADa//T/AQALAAEAAADa//P/AQAIAAQAAADb//P/AQAIAAQAAADc//P/AQAIAAQAAADd//P/AQAIAAQAAADe//P/AQAIAAQAAADf//P/AQAIAAQAAADg//P/AQAIAAQAAADh//P/AQAIAAQAAADi//P/AQAIAAQAAADj//P/AQAIAAQAAADk//P/AQAIAAQAAADl//P/AQAIAAQAAADm//P/AQAIAAQAAADn//P/AQAIAAQAAADo//P/AQAIAAQAAADp//P/AQAIAAQAAADq//P/AQAIAAQAAADr//P/AQAIAAQAAADs//P/AQAIAAQAAADt//P/AQAIAAQAAADu//P/AQAIAAQAAADv//P/AQAIAAQAAADw//P/AQAIAAQAAADx//P/AQAIAAQAAADy//P/AQAIAAQAAADz//P/AQAIAAQAAAD0//P/AQAIAAQAAAD1//P/AQAIAAQAAAD1//b/AQAJAAEAAAD1//X/AQAJAAEAAAD1//T/AQAJAAEAAADP//P/AQAIAAQAAADP//T/AQAIAAQAAADP//X/AQAIAAQAAADP//b/AQAIAAQAAADP//f/AQAIAAQAAADP//j/AQAIAAQAAADQ//P/AQAIAAQAAADQ//T/AQAIAAQAAADQ//X/AQAIAAQAAADQ//b/AQAIAAQAAADQ//f/AQAIAAQAAADQ//j/AQAIAAQAAADR//P/AQAIAAQAAADR//T/AQAIAAQAAADR//X/AQAIAAQAAADR//b/AQAIAAQAAADR//f/AQAIAAQAAADR//j/AQAIAAQAAADS//P/AQAIAAQAAADS//T/AQAIAAQAAADS//X/AQAIAAQAAADS//b/AQAIAAQAAADS//f/AQAIAAQAAADS//j/AQAIAAQAAADT//P/AQAIAAQAAADT//T/AQAIAAQAAADT//X/AQAIAAQAAADT//b/AQAIAAQAAADT//f/AQAIAAQAAADT//j/AQAIAAQAAADU//P/AQAIAAQAAADU//T/AQAIAAQAAADU//X/AQAIAAQAAADU//b/AQAIAAQAAADU//f/AQAIAAQAAADU//j/AQAIAAQAAADV//P/AQAIAAQAAADV//T/AQAIAAQAAADV//X/AQAIAAQAAADV//b/AQAIAAQAAADV//f/AQAIAAQAAADV//j/AQAIAAQAAADW//P/AQAIAAQAAADW//T/AQAIAAQAAADW//X/AQAIAAQAAADW//b/AQAIAAQAAADW//f/AQAIAAQAAADW//j/AQAIAAQAAADX//P/AQAIAAQAAADX//T/AQAIAAQAAADX//X/AQAIAAQAAADX//b/AQAIAAQAAADX//f/AQAKAAQAAADX//j/AQAIAAQAAADY//P/AQAIAAQAAADY//T/AQAHAAUAAADY//X/AQAIAAQAAADY//b/AQAIAAQAAADY//f/AQAIAAQAAADY//j/AQAIAAQAAADZ//P/AQAIAAQAAADZ//T/AQAIAAQAAADZ//X/AQAIAAQAAADZ//b/AQAIAAQAAADZ//f/AQAIAAQAAADZ//j/AQAIAAQAAAD2//P/AQAIAAQAAAD2//T/AQAIAAQAAAD2//X/AQAIAAQAAAD2//b/AQAIAAQAAAD3//P/AQAIAAQAAAD3//T/AQAIAAQAAAD3//X/AQAIAAQAAAD3//b/AQAIAAQAAAD4//P/AQAIAAQAAAD4//T/AQAIAAQAAAD4//X/AQAIAAQAAAD4//b/AQAIAAQAAAD5//P/AQAIAAQAAAD5//T/AQAIAAQAAAD5//X/AQAIAAQAAAD5//b/AQAIAAQAAAD6//P/AQAIAAQAAAD6//T/AQAIAAQAAAD6//X/AQAIAAQAAAD6//b/AQAIAAQAAAD7//P/AQAIAAQAAAD7//T/AQAIAAQAAAD7//X/AQAIAAQAAAD7//b/AQAIAAQAAAD8//P/AQAIAAQAAAD8//T/AQAIAAQAAAD8//X/AQAIAAQAAAD8//b/AQAIAAQAAAD9//P/AQAIAAQAAAD9//T/AQAIAAQAAAD9//X/AQAIAAQAAAD9//b/AQAIAAQAAAD+//P/AQAIAAQAAAD+//T/AQAIAAQAAAD+//X/AQAIAAQAAAD+//b/AQAIAAQAAAD///P/AQAIAAQAAAD///T/AQAIAAQAAAD///X/AQAIAAQAAAD///b/AQAIAAQAAAAAAPP/AQAIAAQAAAAAAPT/AQAIAAQAAAAAAPX/AQAIAAQAAAAAAPb/AQAIAAQAAADx/wEAAQAIAAQAAADx/wIAAQAIAAQAAADx/wMAAQAIAAQAAADx/wQAAQAIAAQAAADx/wUAAQAIAAQAAADx/wYAAQAIAAQAAADx/wcAAQAIAAQAAADx/wgAAQAIAAQAAADy/wEAAQAIAAQAAADy/wIAAQAIAAQAAADy/wMAAQAIAAQAAADy/wQAAQAIAAQAAADy/wUAAQAIAAQAAADy/wYAAQAIAAQAAADy/wcAAQAIAAQAAADy/wgAAQAIAAQAAADz/wEAAQAIAAQAAADz/wIAAQAIAAQAAADz/wMAAQAIAAQAAADz/wQAAQAIAAQAAADz/wUAAQAIAAQAAADz/wYAAQAIAAQAAADz/wcAAQAIAAQAAADz/wgAAQAIAAQAAAD0/wEAAQAIAAQAAAD0/wIAAQAIAAQAAAD0/wMAAQAIAAQAAAD0/wQAAQAIAAQAAAD0/wUAAQAIAAQAAAD0/wYAAQAIAAQAAAD0/wcAAQAIAAQAAAD0/wgAAQAIAAQAAAD1/wEAAQAIAAQAAAD1/wIAAQAIAAQAAAD1/wMAAQAIAAQAAAD1/wQAAQAIAAQAAAD1/wUAAQAIAAQAAAD1/wYAAQAIAAQAAAD1/wcAAQAIAAQAAAD1/wgAAQAIAAQAAAD2/wEAAQAIAAQAAAD2/wIAAQAIAAQAAAD2/wMAAQAIAAQAAAD2/wQAAQAIAAQAAAD2/wUAAQAIAAQAAAD2/wYAAQAIAAQAAAD2/wcAAQAIAAQAAAD2/wgAAQAIAAQAAAD3/wEAAQAIAAQAAAD3/wIAAQAIAAQAAAD3/wMAAQAAAAUAAAD3/wQAAQAIAAQAAAD3/wUAAQAIAAQAAAD3/wYAAQAIAAQAAAD3/wcAAQAIAAQAAAD3/wgAAQAIAAQAAAD4/wEAAQAIAAQAAAD4/wIAAQAIAAQAAAD4/wMAAQAIAAQAAAD4/wQAAQAIAAQAAAD4/wUAAQAIAAQAAAD4/wYAAQAIAAQAAAD4/wcAAQAIAAQAAAD4/wgAAQAIAAQAAAD5/wEAAQAIAAQAAAD5/wIAAQAIAAQAAAD5/wMAAQAIAAQAAAD5/wQAAQAIAAQAAAD5/wUAAQAIAAQAAAD5/wYAAQAIAAQAAAD5/wcAAQAIAAQAAAD5/wgAAQAIAAQAAAD6/wEAAQAIAAQAAAD6/wIAAQAIAAQAAAD6/wMAAQAIAAQAAAD6/wQAAQAIAAQAAAD6/wUAAQAIAAQAAAD6/wYAAQAIAAQAAAD6/wcAAQAIAAQAAAD6/wgAAQAIAAQAAAD7/wEAAQAIAAQAAAD7/wIAAQAIAAQAAAD7/wMAAQAIAAQAAAD7/wQAAQAIAAQAAAD7/wUAAQAIAAQAAAD7/wYAAQAIAAQAAAD7/wcAAQAIAAQAAAD7/wgAAQAIAAQAAAD8/wEAAQAIAAQAAAD8/wIAAQAIAAQAAAD8/wMAAQAIAAQAAAD8/wQAAQAIAAQAAAD8/wUAAQAIAAQAAAD8/wYAAQAIAAQAAAD8/wcAAQAIAAQAAAD8/wgAAQAIAAQAAAD9/wEAAQAIAAQAAAD9/wIAAQAIAAQAAAD9/wMAAQAIAAQAAAD9/wQAAQAIAAQAAAD9/wUAAQAIAAQAAAD9/wYAAQAIAAQAAAD9/wcAAQAIAAQAAAD9/wgAAQAIAAQAAAD+/wEAAQAIAAQAAAD+/wIAAQAIAAQAAAD+/wMAAQAIAAQAAAD+/wQAAQAIAAQAAAD+/wUAAQAIAAQAAAD+/wYAAQAIAAQAAAD+/wcAAQAIAAQAAAD+/wgAAQAIAAQAAAD//wEAAQAIAAQAAAD//wIAAQAIAAQAAAD//wMAAQAIAAQAAAD//wQAAQAIAAQAAAD//wUAAQAIAAQAAAD//wYAAQAIAAQAAAD//wcAAQAIAAQAAAD//wgAAQAIAAQAAAAAAAEAAQAIAAQAAAAAAAIAAQAIAAQAAAAAAAMAAQAIAAQAAAAAAAQAAQAIAAQAAAAAAAUAAQAIAAQAAAAAAAYAAQAIAAQAAAAAAAcAAQAIAAQAAAAAAAgAAQAIAAQAAADs/wUAAQAIAAQAAADs/wYAAQAIAAQAAADs/wcAAQAIAAQAAADs/wgAAQAIAAQAAADs/wkAAQAIAAQAAADs/woAAQAIAAQAAADt/wUAAQAIAAQAAADt/wYAAQAFAAUAAADt/wcAAQAIAAQAAADt/wgAAQAIAAQAAADt/wkAAQAIAAQAAADt/woAAQAIAAQAAADu/wUAAQAIAAQAAADu/wYAAQAIAAQAAADu/wcAAQAIAAQAAADu/wgAAQAIAAQAAADu/wkAAQAIAAQAAADu/woAAQAIAAQAAADv/wUAAQAIAAQAAADv/wYAAQAIAAQAAADv/wcAAQAIAAQAAADv/wgAAQAIAAQAAADv/wkAAQAIAAQAAADv/woAAQAIAAQAAADw/wUAAQAIAAQAAADw/wYAAQAIAAQAAADw/wcAAQAIAAQAAADw/wgAAQAIAAQAAADw/wkAAQAIAAQAAADw/woAAQAIAAQAAADx/wkAAQAIAAQAAADx/woAAQAIAAQAAADy/wkAAQAIAAQAAADy/woAAQAIAAQAAADz/wkAAQAIAAQAAADz/woAAQAIAAQAAAD0/wkAAQAIAAQAAAD0/woAAQAIAAQAAAD1/wkAAQAIAAQAAAD1/woAAQAIAAQAAAD2/wkAAQAIAAQAAAD2/woAAQAIAAQAAAD3/wkAAQAIAAQAAAD3/woAAQAIAAQAAAD4/wkAAQAIAAQAAAD4/woAAQAIAAQAAAD5/wkAAQAIAAQAAAD5/woAAQAIAAQAAAD6/wkAAQAIAAQAAAD6/woAAQAIAAQAAAD7/wkAAQAIAAQAAAD7/woAAQAIAAQAAAD8/wkAAQAIAAQAAAD8/woAAQAIAAQAAAD9/wkAAQAIAAQAAAD9/woAAQAIAAQAAAD+/wkAAQAIAAQAAAD+/woAAQAIAAQAAAD//wkAAQAIAAQAAAD//woAAQAIAAQAAAAAAAkAAQAIAAQAAAAAAAoAAQAIAAQAAADP/wkAAQAIAAQAAADP/woAAQAIAAQAAADQ/wkAAQAIAAQAAADQ/woAAQAIAAQAAADR/wkAAQAIAAQAAADR/woAAQAIAAQAAADS/wkAAQAIAAQAAADS/woAAQAIAAQAAADT/wkAAQAIAAQAAADT/woAAQAIAAQAAADU/wkAAQAIAAQAAADU/woAAQAIAAQAAADV/wkAAQAIAAQAAADV/woAAQAIAAQAAADW/wkAAQAIAAQAAADW/woAAQAIAAQAAADX/wkAAQAIAAQAAADX/woAAQAIAAQAAADY/wkAAQAIAAQAAADY/woAAQAIAAQAAADZ/wkAAQAIAAQAAADZ/woAAQAIAAQAAADa/wkAAQAIAAQAAADa/woAAQAIAAQAAADb/wkAAQAIAAQAAADb/woAAQAIAAQAAADc/wkAAQAIAAQAAADc/woAAQAIAAQAAADd/wkAAQAIAAQAAADd/woAAQAIAAQAAADe/wkAAQAIAAQAAADe/woAAQAIAAQAAADf/wkAAQAIAAQAAADf/woAAQAIAAQAAADg/wkAAQAIAAQAAADg/woAAQAIAAQAAADh/wkAAQAIAAQAAADh/woAAQAIAAQAAADi/wkAAQAIAAQAAADi/woAAQAIAAQAAADj/wkAAQAIAAQAAADj/woAAQAIAAQAAADk/wkAAQAIAAQAAADk/woAAQAIAAQAAADl/wkAAQAIAAQAAADl/woAAQAIAAQAAADm/wkAAQAIAAQAAADm/woAAQAIAAQAAADn/wkAAQAIAAQAAADn/woAAQAIAAQAAADo/wkAAQAIAAQAAADo/woAAQAIAAQAAADp/wkAAQAIAAQAAADp/woAAQAIAAQAAADq/wkAAQAIAAQAAADq/woAAQAIAAQAAADr/wkAAQAIAAQAAADr/woAAQAIAAQAAADP//7/AQAIAAQAAADP////AQAIAAQAAADP/wAAAQAIAAQAAADP/wEAAQAIAAQAAADP/wIAAQAIAAQAAADP/wMAAQAIAAQAAADP/wQAAQAIAAQAAADP/wUAAQAIAAQAAADP/wYAAQAIAAQAAADP/wcAAQAIAAQAAADP/wgAAQAIAAQAAADQ//7/AQAIAAQAAADQ////AQAIAAQAAADQ/wAAAQAIAAQAAADQ/wEAAQAIAAQAAADQ/wIAAQAIAAQAAADQ/wMAAQAIAAQAAADQ/wQAAQAIAAQAAADQ/wUAAQAIAAQAAADQ/wYAAQAIAAQAAADQ/wcAAQAIAAQAAADQ/wgAAQAIAAQAAADR//7/AQAIAAQAAADR////AQAIAAQAAADR/wAAAQAIAAQAAADR/wEAAQAIAAQAAADR/wIAAQAIAAQAAADR/wMAAQAIAAQAAADR/wQAAQAIAAQAAADR/wUAAQAIAAQAAADR/wYAAQAIAAQAAADR/wcAAQAIAAQAAADR/wgAAQAIAAQAAADS//7/AQAIAAQAAADS////AQAIAAQAAADS/wAAAQAIAAQAAADS/wEAAQAIAAQAAADS/wIAAQAIAAQAAADS/wMAAQAIAAQAAADS/wQAAQAIAAQAAADS/wUAAQAIAAQAAADS/wYAAQAIAAQAAADS/wcAAQAIAAQAAADS/wgAAQAIAAQAAADT//7/AQAIAAQAAADT////AQAIAAQAAADT/wAAAQAIAAQAAADT/wEAAQAIAAQAAADT/wIAAQAIAAQAAADT/wMAAQAIAAQAAADT/wQAAQAIAAQAAADT/wUAAQAIAAQAAADT/wYAAQAIAAQAAADT/wcAAQAIAAQAAADT/wgAAQAIAAQAAADU//7/AQAIAAQAAADU////AQAIAAQAAADU/wAAAQAIAAQAAADU/wEAAQAAAAAAAADU/wIAAQAIAAQAAADU/wMAAQAIAAQAAADU/wQAAQAIAAQAAADU/wUAAQAIAAQAAADU/wYAAQAIAAQAAADU/wcAAQAIAAQAAADU/wgAAQAIAAQAAADV//7/AQAIAAQAAADV////AQAIAAQAAADV/wAAAQAIAAQAAADV/wEAAQAIAAQAAADV/wIAAQAIAAQAAADV/wMAAQAIAAQAAADV/wQAAQAIAAQAAADV/wUAAQAIAAQAAADV/wYAAQAIAAQAAADV/wcAAQAIAAQAAADV/wgAAQAIAAQAAADW//7/AQAIAAQAAADW////AQAIAAQAAADW/wAAAQAIAAQAAADW/wEAAQAIAAQAAADW/wIAAQAIAAQAAADW/wMAAQAIAAQAAADW/wQAAQAIAAQAAADW/wUAAQAIAAQAAADW/wYAAQAIAAQAAADW/wcAAQAIAAQAAADW/wgAAQAIAAQAAADX//7/AQAIAAQAAADX////AQAIAAQAAADX/wAAAQAIAAQAAADX/wEAAQAIAAQAAADX/wIAAQAIAAQAAADX/wMAAQAIAAQAAADX/wQAAQAIAAQAAADX/wUAAQAIAAQAAADX/wYAAQAIAAQAAADX/wcAAQAIAAQAAADX/wgAAQAIAAQAAADY//7/AQAIAAQAAADY////AQAIAAQAAADY/wAAAQAIAAQAAADY/wEAAQAIAAQAAADY/wIAAQAIAAQAAADY/wMAAQAIAAQAAADY/wQAAQAIAAQAAADY/wUAAQAIAAQAAADY/wYAAQAIAAQAAADY/wcAAQAIAAQAAADY/wgAAQAIAAQAAADZ//7/AQAIAAQAAADZ////AQAIAAQAAADZ/wAAAQAIAAQAAADZ/wEAAQAIAAQAAADZ/wIAAQAIAAQAAADZ/wMAAQAIAAQAAADZ/wQAAQAIAAQAAADZ/wUAAQAIAAQAAADZ/wYAAQADAAUAAADZ/wcAAQAIAAQAAADZ/wgAAQAIAAQAAADa//7/AQAIAAQAAADa////AQAIAAQAAADa/wAAAQAIAAQAAADa/wEAAQAIAAQAAADa/wIAAQAIAAQAAADa/wMAAQAIAAQAAADa/wQAAQAIAAQAAADa/wUAAQAIAAQAAADa/wYAAQAIAAQAAADa/wcAAQAIAAQAAADa/wgAAQAIAAQAAAA=")
tile_set = SubResource("TileSet_khtaa")
navigation_enabled = false

[node name="TopLeft" parent="Limits" index="0"]
position = Vector2(-3124, -824)

[node name="BottomRight" parent="Limits" index="1"]
position = Vector2(62, 697)

[node name="SentinelDoor" type="AnimatableBody2D" parent="." index="5"]
position = Vector2(-2500, -282)

[node name="Sprite2D" type="Sprite2D" parent="SentinelDoor" index="0"]
texture = ExtResource("2_rfesw")
region_enabled = true
region_rect = Rect2(315, 29.5, 141, 179)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SentinelDoor" index="1"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_khtaa")

[node name="AnimationPlayer" type="AnimationPlayer" parent="SentinelDoor" index="2"]
libraries = {
&"": SubResource("AnimationLibrary_a2fcc")
}

[node name="SentinelDoorOpener" type="Area2D" parent="." index="6"]
position = Vector2(-2200, 498)

[node name="Sprite2D" type="Sprite2D" parent="SentinelDoorOpener" index="0"]
texture = ExtResource("2_rfesw")
region_enabled = true
region_rect = Rect2(625, 47.5, 108, 29)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SentinelDoorOpener" index="1"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_3osmi")

[connection signal="body_entered" from="SentinelDoorOpener" to="." method="_on_sentinel_door_opener_body_entered"]
[connection signal="body_exited" from="SentinelDoorOpener" to="." method="_on_sentinel_door_opener_body_exited"]
